@@ -1,8 +1,10 @@
+E: another-version: no-copyright-file
 E: fields source: package-uses-debhelper-but-lacks-build-depends
 E: fields: debian-changelog-file-missing-or-wrong-name
 E: fields: depends-on-python-minimal depends
 E: fields: essential-no-not-needed
 E: fields: no-copyright-file
+W: another-version: debian-revision-should-not-be-zero 123.4-0
 W: fields source: changelog-should-mention-nmu
 W: fields source: debian-revision-not-well-formed 1.5-.3
 W: fields source: native-package-with-dash-version
