@@ -4,5 +4,6 @@ fields (1.5-.3) unstable; urgency=low
     - debian-revision-not-well-formed
     - depends-on-python-minimal
     - essential-no-not-needed
+    - debian-revision-should-not-be-zero
 
  -- Tobias Quathamer <toddy@debian.org>  Wed, 30 Jul 2008 12:35:09 +0200
